# ISO-Toolkit

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.bak  Dockerfile.frontend  Dockerfile.frontend.bak  IMPROVEMENT_PIPELINE.md  README.md  nginx.conf  pyproject.toml  render.yaml  start_web.py  test_download_urls.py  zeabur.yaml
backend/: .env.example  Dockerfile  main.py  requirements.txt  zeabur.yaml
backend/api/: main.py
backend/api/auth/: __init__.py  auth_utils.py  rate_limiter.py
backend/api/database/: models.py  session.py
backend/api/models/: schemas.py
backend/api/routes/: admin_iso.py  admin_settings.py  analytics.py  auth.py  downloads.py  os.py  proxy_download.py  ws.py
backend/api/services/: download.py  websocket.py
backend/core/: __init__.py  manager.py  models.py  scraper_archive_org.py  scraper_botasaurus.py  scraper_cloudflare_bypass.py  scraper_massgrave.py  scraper_windows_iso.py  special_downloaders.py
backend/core/os/: __init__.py  base.py  bsd.py  linux.py  macos.py  windows.py
backend/scripts/: __init__.py  init_admin.py
frontend/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  zeabur.yaml
frontend/src/: App.tsx  index.css
frontend/src/assets/: download-logos.sh  logos.ts
frontend/src/components/: LogoImage.tsx
frontend/src/contexts/: AuthContext.tsx  __init__.py
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AdminDashboard.tsx  BrowseOS.tsx  ChangePassword.tsx  Downloads.tsx  Home.tsx  Login.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
py/: __init__.py
py/iso_toolkit/: __init__.py  main.py  manager.py  models.py
py/iso_toolkit/os/: __init__.py  base.py  linux.py  macos.py  windows.py
py/iso_toolkit/tui/: __init__.py  app.py  styles.css
rust/: Cargo.toml
rust/src/: lib.rs
