[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "iso-toolkit"
version = "0.1.0"
description = "A beautiful multi-OS ISO downloader toolkit for Windows, Linux, macOS, and more"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Operating System",
]
dependencies = [
    "textual>=0.86.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "typing-extensions>=4.9.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
iso-toolkit = "iso_toolkit.main:main"

[tool.maturin]
python-source = "py"
module-name = "iso_toolkit._core"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
