[package]
name = "winiso-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "winiso_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1.35", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
